# ocypode

./: .gitignore  .lintstagedrc.mjs  .markdownlint-cli2.yaml  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  package.json  rust-toolchain.toml  rustfmt.toml
.github/: renovate.json
.github/actions/markdownlint/: action.yaml
.github/workflows/: audit.yaml  ci.yaml
.husky/: pre-push
crates/certs/: key.pem  server.crt
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  wire.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  error.rs  header.rs  lib.rs  wire.rs
crates/protocol/src/message/: connect.rs  info.rs  mod.rs  msg.rs  publish.rs  sub.rs  unsub.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: auth.rs  client.rs  config.rs  error.rs  grpc.rs  handshake.rs  lib.rs  logger.rs  main.rs  metrics.rs  parser.rs  permission.rs  quic.rs  router.rs  topic.rs  transport.rs
crates/server/src/config/: mod.rs  quic.rs
crates/server/src/core/: mod.rs  subscriber.rs
crates/server/src/log/: logger.rs  mod.rs
crates/server/src/profiler/: mod.rs  pprof_profiler.rs
crates/server/src/protocol/: mod.rs
crates/server/src/quic/: mod.rs  server.rs
crates/server/src/routing/: mod.rs
crates/server/src/topic/: mod.rs
crates/server/tests/: grpc_tests.rs  protocol.rs
crates/test_util/: Cargo.toml
crates/test_util/src/certs/: generate_certs.sh
crates/test_util/src/configs/: dev-config.yaml
crates/tests/: Cargo.toml
crates/tests/configs/: dev-config.yaml
crates/tests/integrations/: mod.rs  proto.rs
crates/tests/integrations/utils/: client.rs  server.rs
crates/tools/: Cargo.toml
crates/topic/: Cargo.toml
crates/topic/src/: error.rs  lib.rs  topic_wire.rs
crates/wire/: Cargo.toml
crates/wire/src/: lib.rs
docs/specs/: protocol.md  topic.md
proto/: buf.yaml
proto/ocypode/pubsub/v1/: pubsub.proto
tools/: Cargo.toml
