[workspace]
members = ["crates/server"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.8"
console-subscriber = "0.5.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.5"
tonic-health = "0.14.5"
prometheus = {version = "0.14.0", features = ["process"] }
