[workspace]
members = ["crates/server", "tools"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.8"
console-subscriber = "0.5.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = "0.7.18"
tonic = "0.14.5"
tonic-health = "0.14.5"
tonic-prost-build = "0.14.5"
prost = "0.14.3"
prometheus = {version = "0.14.0", features = ["process"] }
s2n-quic = "1.76.0"
rcgen = "0.14.7"
bytes = "1.11.1"
thiserror = "2.0.18"