[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
profiling = ["dep:pprof"]

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pprof = { workspace = true, optional = true }
s2n-quic = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
