[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
console-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio-stream  = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true , features = ["process"] }
