[package]
name = "server"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
console-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio-stream  = { workspace = true }
tokio-util.workspace = true
axum = { workspace = true }
prometheus = { workspace = true , features = ["process"] }
s2n-quic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
